--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -1,63 +1,155 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <title>Login or Register</title>
-  <link rel="stylesheet" media="screen" href="../static/bootstrap.min.css">
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <title>GuacitUp</title>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+
+    <!-- Bootstrap core CSS -->
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Material Design Bootstrap -->
+    <link href="../static/css/mdb.min.css" rel="stylesheet">
+
+    <!-- Your custom styles (optional) -->
+    <link href="../static/css/style.css" rel="stylesheet">
+
+    <!-- Template styles -->
+    <style>
+        /* TEMPLATE STYLES */
+
+        html,
+        body,
+        .view {
+            height: 100%;
+        }
+        /* Navigation*/
+
+
+        .navbar {
+            background-color: #1C2331;
+        }
+
+        .scrolling-navbar {
+            -webkit-transition: background .5s ease-in-out, padding .5s ease-in-out;
+            -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
+            transition: background .5s ease-in-out, padding .5s ease-in-out;
+        }
+
+        .top-nav-collapse {
+            background-color: #1C2331;
+        }
+
+        footer.page-footer {
+            background-color: #1C2331;
+            margin-top: 2rem;
+        }
+
+        @media only screen and (max-width: 768px) {
+            .navbar {
+                background-color: #1C2331;
+            }
+        }
+        /*Call to action*/
+
+        .flex-center {
+            color: #fff;
+        }
+
+        .view {
+            background: url("https://honestchops.com/wp-content/uploads/2014/05/DSC_0099.jpg")
+            no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+        }
+        /*Contact section*/
+
+        #contact .fa {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            color: #1C2331;
+        }
+    </style>
+
 </head>
+
 <body>
-  <style type=text/css>
-    background-image: url("static/images/bg.jpeg");
-  </style>
 
-  <!--NAV BAR-->
- <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+
+    <!--Navbar-->
+    <nav class="navbar navbar-dark navbar-fixed-top scrolling-navbar">
+
+        <!-- Collapse button-->
+        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapseEx">
+            <i class="fa fa-bars"></i>
         </button>
-        <a class="navbar-brand">Guacamole</a>
-      </div>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="/">Home<span class="sr-only">(current)</span></a></li>
-          <!--<li><a href="/browse">Browse</a></li>-->
-        </ul>
-        <form class="navbar-form navbar-left" action="/display/" method="post">
-               <div class="form-group">
-                 <input type="text" class="form-control" name="lookup" placeholder="Search">
-               </div>
-               <!-- <button class="btn btn-default" type="submit" name="search" value="search">Submit</button> -->
-               <input class="btn btn-primary" type="submit" name="search" value="search">
-        </form>
-        <ul class="nav navbar-nav navbar-right">
-            {% if session.user %}
+        <div class="container">
 
-              <p class="navbar-text">Signed in as <a href="/profile" class="navbar-link">{{username}}</a></p>
-              <li><a href="/logout/">Logout</a></li>
-            {% else %}
-              <li><a href="/authenticate">Login</a></li>
-            {% endif %}
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
+            <!--Collapse content-->
+            <div class="collapse navbar-toggleable-xs" id="collapseEx">
+                <!--Navbar Brand-->
+                <a class="navbar-brand" href="" target="_blank">GuacTime</a>
+                <!--Links-->
+                <ul class="nav navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    {% if session.user %}
+                    <li class="nav-item"><a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a></li>
+                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/home/#abouto">Featured</a>
+                    </li>
+                    <form class="form-inline"  action="/display/" method="post">
+                    <input class="form-control" name="lookup" type="text" placeholder="Search">
 
+                    <button class="nav-link nav-item btn btn-primary btn-sm fadeInDown"  style="display: none;" type="submit" name="search" value="search"></button>
+                </form>
+                {% if session.user %}
+                    <li class="nav-item">
+                    <a href="/profile" style="color: #2BBBAD;" class="nav-link">Signed in as {{session.user}}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary btn-sm fadeInDown" href="/logout/">Logout</a>
+                    </li>
+                {% else %}
+               <li class="nav-item">
+                        <a class="nav-link btn btn-primary btn-sm fadeInDown" href="/authenticate/">Login</a>
+                    </li>
+                 {% endif %}
+
+                </ul>
+
+                    <!-- <a href="/profile" style="color: #2BBBAD;" class="nav-link">Signed in as {{session.user}}</a>
+                    <li class="nav-item">
+ -->
+
+            </div>
+            <!--/.Collapse content-->
+
+        </div>
+
+    </nav>
+    <!--/.Navbar-->
   <!--NAV BAR-->
 
   <center>
 
-  <div class="container">
+  <div class="container" style="padding-top: 100px;">
     <div class="row vdivide">
 
       <!-- LOGIN -->
-      <div class="col-sm-6 text-center">
+      <div class="col-sm-6 text-center" style="padding-bottom: 50px;">
         <h1>Login</h1>
         {% if login_message %}
           <div class="alert alert-danger" role="alert">
@@ -72,7 +164,7 @@
           <input class="form-control" type="password" name="password" placeholder="Password">
           <br>
           <br><br>
-          <input class="btn btn-primary" type="submit" name="login" value="Login" required="true">
+          <input class="btn btn-primary" type="submit" name="login" value="login" required="true">
         </form>
       </div>
 
@@ -114,12 +206,11 @@
           Biologically, you're:
           <div class="radio">
             <label><input type="radio" name="gender" value="m" required="true">Male</label>
-          </div>
-          <div class="radio">
+          </div><div class="radio">
             <label><input type="radio" name="gender" value="f">Female</label>
           </div>
           <br>
-          <input class="btn btn-primary" type="submit" name="register" value="Register" required="true">
+          <input class="btn btn-primary" type="submit" name="register" value="register" required="true">
         </form>
       </div>
 
@@ -127,4 +218,17 @@
   </div>
 
   </center>
+
+   <!-- SCRIPTS -->
+
+    <script type="text/javascript" src="../static/js/jquery-3.1.1.min.js"></script>
+
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="../static/js/tether.min.js"></script>
+
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="../static/js/mdb.min.js"></script>
 </body>
