--- a/templates/base.html
+++ b/templates/base.html
@@ -16,19 +16,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-		<li><a href="/">Home<span class="sr-only">(current)</span></a></li>
-		{% if session.user %}
-			<li><a href="/profile">Profile<span class="sr-only">(current)</span></a></li>
-		{% endif %}
+	<li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
 	<!--<li><a href="/browse">Browse</a></li>-->
       </ul>
-      <form class="navbar-form navbar-left" action="/display/" method="post">
-	<div class="form-group">
-	  <input type="text" class="form-control" name="lookup" placeholder="Search">
-	</div>
-	<!-- <button class="btn btn-default" type="submit" name="search" value="search">Submit</button> -->
-	<input class="btn btn-primary" type="submit" name="search" value="search">
-      </form>
+
       <ul class="nav navbar-nav navbar-right">
 	{% if session.user %}
 	<p class="navbar-text">Signed in as <a href="/profile" class="navbar-link">{{session.user}}</a></p>
