--- a/templates/home.html
+++ b/templates/home.html
@@ -64,7 +64,7 @@
         }
 
         .view {
-            background: url("http://mylatinatable.com/wp-content/uploads/2016/02/guacamole-foto-heroe.jpg")
+            background: url("https://honestchops.com/wp-content/uploads/2014/05/DSC_0099.jpg")
             no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
@@ -104,7 +104,12 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
-
+                    {% if session.user %}
+                    <li class="nav-item"><a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a></li>
+                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/home/#abouto">Featured</a>
+                    </li>
                     <form class="form-inline"  action="/display/" method="post">
                     <input class="form-control" name="lookup" type="text" placeholder="Search">
 
@@ -165,10 +170,144 @@
         <!--Section: About-->
         <section id="about" class="text-xs-center wow bounceIn" data-wow-delay="0.2s">
 
-            <p>We believe — and medical studies prove — that the best way to lose weight and keep it off is to simply keep track of the foods you eat. Gimmicky machines and fad diets don't work, so we designed a free website that makes calorie counting and food tracking easy. </p>
+            <p>We believe — and medical studies prove — that the best way to lose weight and keep it off is to simply keep track of the foods you eat. Gimmicky machines and fad diets don't work, so we designed a free website and mobile apps that make calorie counting and food tracking easy. </p>
 
         </section>
         <!--Section: About-->
+
+        <div class="divider-new">
+            <h2 class="h2-responsive wow fadeInDown">Best features</h2>
+        </div>
+
+        <!--Section: Best features-->
+        <section id="best-features">
+
+            <div class="row">
+
+                <!--First columnn-->
+                <div class="col-lg-3">
+                    <!--Card-->
+                    <div class="card wow fadeInUp">
+
+                        <!--Card image-->
+                        <div class="view overlay hm-white-slight">
+                            <img src="http://cdn.themediterraneandish.com/wp-content/uploads/2014/06/Beef-Shish-Kabob-Recipe-10.jpg" class="img-fluid" style="width: 100vw;" alt="">
+                            <a>
+                                <div class="mask"></div>
+                            </a>
+                        </div>
+                        <!--/.Card image-->
+
+                        <!--Card content-->
+                        <div class="card-block text-xs-center">
+                            <!--Title-->
+                            <h4 class="card-title">Shish Kabob</h4>
+                            <hr>
+                            <!--Text-->
+                            <p class="card-text">A dish consisting of pieces of seasoned meat and sometimes vegetables roasted on skewers and served with condiments.</p>
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--First columnn-->
+
+                <!--Second columnn-->
+                <div class="col-lg-3">
+                    <!--Card-->
+                    <div class="card wow fadeInUp" data-wow-delay="0.2s">
+
+                        <!--Card image-->
+                        <div class="view overlay hm-white-slight">
+                            <img src="http://a.hilanddairy.envoydev.com/sites/default/files/recipe_fried_chicken.jpg" style="width: 100vw;" class="img-fluid" alt="">
+                            <a>
+                                <div class="mask"></div>
+                            </a>
+                        </div>
+                        <!--/.Card image-->
+
+                        <!--Card content-->
+                        <div class="card-block text-xs-center">
+                            <!--Title-->
+                            <h4 class="card-title">Buttermilk Fried Chicken</h4>
+                            <hr>
+                            <!--Text-->
+                            <p class="card-text">Chicken pieces floured or battered and then dipped in buttermilk before being pan-fried, deep fried, or pressure fried. The breading and coating adds a crisp coating or crust and added flavor to the exterior.</p>
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Second columnn-->
+
+                <!--Third columnn-->
+                <div class="col-lg-3">
+                    <!--Card-->
+                    <div class="card wow fadeInUp" data-wow-delay="0.4s">
+
+                        <!--Card image-->
+                        <div class="view overlay hm-white-slight">
+                            <img src="https://s-media-cache-ak0.pinimg.com/736x/26/0f/49/260f49edb64b3f858d77659c4ba72388.jpg" style="width: 100vw;" class="img-fluid" alt="">
+                            <a>
+                                <div class="mask"></div>
+                            </a>
+                        </div>
+                        <!--/.Card image-->
+
+                        <!--Card content-->
+                        <div class="card-block text-xs-center">
+                            <!--Title-->
+                            <h4 class="card-title">Steak Tacos</h4>
+                            <hr>
+                            <!--Text-->
+                            <p class="card-text">A Mexican dish consisting of a fried tortilla, typically folded, filled with various mixtures, such as seasoned meat, beans, lettuce, and tomatoes.</p>
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Third columnn-->
+
+                <!--First columnn-->
+                <div class="col-lg-3">
+                    <!--Card-->
+                    <div class="card wow fadeInUp" data-wow-delay="0.6s">
+
+                        <!--Card image-->
+                        <div class="view overlay hm-white-slight">
+                            <img src="http://images.shape.mdpcdn.com/sites/shape.com/files/styles/slide/public/healthy-chinese-food_0.jpg" style="width: 100vw;" class="img-fluid" alt="">
+                            <a>
+                                <div class="mask"></div>
+                            </a>
+                        </div>
+                        <!--/.Card image-->
+
+                        <!--Card content-->
+                        <div class="card-block text-xs-center">
+                            <!--Title-->
+                            <h4 class="card-title">Stir-Fry Noodles</h4>
+                            <hr>
+                            <!--Text-->
+                            <p class="card-text">Vegetables and meat cooked in a small amount of very hot oil while being stirred in a wok.</p>
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--First columnn-->
+            </div>
+
+        </section>
+        <!--/Section: Best features-->
+
+        <div class="divider-new">
+            <h2 class="h2-responsive wow fadeInUp">Contact us</h2>
+        </div>
+
 
     </div>
     <!--/ Main container-->
@@ -208,42 +347,7 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="../static/js/mdb.min.js"></script>
 
-    <!--Google Maps-->
-    <script src="http://maps.google.com/maps/api/js"></script>
-
-    <script>
-        function init_map() {
-
-            var var_location = new google.maps.LatLng(40.725118, -73.997699);
-
-            var var_mapoptions = {
-                center: var_location,
-
-                zoom: 14
-            };
-
-            var var_marker = new google.maps.Marker({
-                position: var_location,
-                map: var_map,
-                title: "New York"
-            });
-
-            var var_map = new google.maps.Map(document.getElementById("map-container"),
-                var_mapoptions);
-
-            var_marker.setMap(var_map);
-
-        }
-
-        google.maps.event.addDomListener(window, 'load', init_map);
-
-
-
-
-
-
-
-    </script>
+   
 
     <!-- Animations init-->
     <script>
