--- a/templates/update.html
+++ b/templates/update.html
@@ -1,40 +1,187 @@
 <!DOCTYPE html>
-
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Guacamole</title>
-    <link rel="stylesheet" media="screen" href="../static/bootstrap.min.css">
-  </head>
 
-  <body>
-    {% extends "base.html" %}
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <title>GuacitUp</title>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+
+    <!-- Bootstrap core CSS -->
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Material Design Bootstrap -->
+    <link href="../static/css/mdb.min.css" rel="stylesheet">
+
+    <!-- Your custom styles (optional) -->
+    <link href="../static/css/style.css" rel="stylesheet">
+
+    <!-- Template styles -->
+    <style>
+        /* TEMPLATE STYLES */
+
+        html,
+        body,
+        .view {
+            height: 100%;
+        }
+        /* Navigation*/
+
+
+        .navbar {
+            background-color: #1C2331;
+        }
+
+        .scrolling-navbar {
+            -webkit-transition: background .5s ease-in-out, padding .5s ease-in-out;
+            -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
+            transition: background .5s ease-in-out, padding .5s ease-in-out;
+        }
+
+        .top-nav-collapse {
+            background-color: #1C2331;
+        }
+
+        footer.page-footer {
+            background-color: #1C2331;
+            margin-top: 2rem;
+        }
+
+        @media only screen and (max-width: 768px) {
+            .navbar {
+                background-color: #1C2331;
+            }
+        }
+        /*Call to action*/
+
+        .flex-center {
+            color: #fff;
+        }
+
+        .view {
+            background: url("https://honestchops.com/wp-content/uploads/2014/05/DSC_0099.jpg")
+            no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+        }
+        /*Contact section*/
+
+        #contact .fa {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            color: #1C2331;
+        }
+    </style>
+
+</head>
+
+<body>
+
+
+    <!--Navbar-->
+    <nav class="navbar navbar-dark navbar-fixed-top scrolling-navbar">
+
+        <!-- Collapse button-->
+        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapseEx">
+            <i class="fa fa-bars"></i>
+        </button>
+
+        <div class="container">
+
+            <!--Collapse content-->
+            <div class="collapse navbar-toggleable-xs" id="collapseEx">
+                <!--Navbar Brand-->
+                <a class="navbar-brand" href="" target="_blank">GuacTime</a>
+                <!--Links-->
+                <ul class="nav navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    {% if session.user %}
+                    <li class="nav-item"><a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a></li>
+                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/home/#abouto">Featured</a>
+                    </li>
+                    <form class="form-inline"  action="/display/" method="post">
+                    <input class="form-control" name="lookup" type="text" placeholder="Search">
+
+                    <button class="nav-link nav-item btn btn-primary btn-sm fadeInDown"  style="display: none;" type="submit" name="search" value="search"></button>
+                </form>
+                {% if session.user %}
+                    <li class="nav-item">
+                    <a href="/profile" style="color: #2BBBAD;" class="nav-link">Signed in as {{session.user}}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary btn-sm fadeInDown" href="/logout/">Logout</a>
+                    </li>
+                {% else %}
+               <li class="nav-item">
+                        <a class="nav-link btn btn-primary btn-sm fadeInDown" href="/authenticate/">Login</a>
+                    </li>
+                 {% endif %}
+
+                </ul>
+
+                    <!-- <a href="/profile" style="color: #2BBBAD;" class="nav-link">Signed in as {{session.user}}</a>
+                    <li class="nav-item">
+ -->
+
+            </div>
+            <!--/.Collapse content-->
+
+        </div>
+
+    </nav>
+    <!--/.Navbar-->
+
+  
+
+
+
+<!-- Nav tabs -->
+
+  <div class="container" style="padding-top: 100px; display: inline-block;"> 
+    
     {% block content %}
     {% if update %}
-      {% if color %}
-        <div class="alert alert-danger" role="alert">
-          <span class="sr-only">Update:</span>
-            {{ update }}
-        </div>
-      {% else %}
         <div class="alert alert-success" role="alert">
           <span class="sr-only">Update:</span>
             {{ update }}
         </div>
-      {% endif %}
     {% endif %}
       <ul class="nav nav-tabs">
         <li role="presentation"><a href="/profile">Profile</a></li>
         <li role="presentation"><a href="/calorie">Calorie Tracker</a></li>
         <li role="presentation" class="active"><a href="/update">Update Information</a></li>
-      </ul>
+      </ul><br>
       <form action="/update/" method="post">
         <h5>Update Age:</h5><input class="form-control" type="number" name="age" placeholder="Age">
         <h5>Update Height:</h5><input class="form-control" type="number" name="height" placeholder="Height">
         <h5>Update Weight:</h5><input class="form-control" type="number" name="weight" placeholder="Weight">
         <br/>
-        <input class="btn btn-primary" type="submit" name="update" value="Update">
+        <input class="btn btn-primary" type="submit" name="update" value="update">
       </form>
     {% endblock %}
-  </body>
+    </body>
+  <!-- SCRIPTS -->
+
+    <script type="text/javascript" src="../static/js/jquery-3.1.1.min.js"></script>
+
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="../static/js/tether.min.js"></script>
+
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="../static/js/mdb.min.js"></script>
+
 </html>
